client/src/Flow/Flow.css
:root {
  --border-color: #cacaca;
  --background-color: #ffffff;
  --background-box-title: #f7f7f7;
  --background-gird-line: #f1f1f1;
}

/* TODO: Move html, body and app out of Interact */
/* TODO: Rename Interact with a diferent name*/
html,
body {
  width: 100vw;
  height: 100vh;
  overflow: hidden;
  font-family: 'Segoe UI', Arial, sans-serif;
}

#app {
  width: 100vw;
  height: 100vh;
  background: var(--background-color);
  background-size: 10px 10px;
  background-image: linear-gradient(
      to right,
      var(--background-gird-line) 1px,
      transparent 1px
    ),
    linear-gradient(to bottom, var(--background-gird-line) 1px, transparent 1px);
}

/* PARENT TSCHS CONTAINER  */
.tschs {
  display: flex;
  position: relative;
  overflow: hidden;
  touch-action: none;
  outline: none;
  width: 100vw;
  height: 100vh;
  user-select: none;
}

/* TSCH'S Nodes General CSS */
.tschs .tsch {
  /* Position */
  display: flex;
  position: absolute;
  transform: translate(0px, 0px);
  /* Settings */
  touch-action: none;
  box-sizing: border-box; /* Important for sizes */
  /* Size */
  min-height: 50px;
  min-width: 150px;
  /* Style */
  border-radius: 4px;
  border: 1px solid var(--border-color);
  box-shadow: 0 2px 15px 2px var(--border-color);
  color: black;
}

.tschs .tsch.selected {
  border: 1px solid #4ea9ff;
  -webkit-box-shadow: 0 2px 20px 2px #4ea9ff;
  box-shadow: 0 2px 20px 2px #4ea9ff;
}

.tschs .tsch:hover {
  cursor: move;
}

.tschs .tsch .inputs,
.tschs .tsch .outputs {
  width: 0px;
}

.tschs .tsch .input,
.tschs .tsch .output {
  position: relative;
  background: white;
  border-radius: 50%;
  cursor: crosshair;
  margin-bottom: 5px;
  height: 15px;
  width: 15px;
  border: 2px solid var(--border-color);
}

.tschs .tsch .input:hover,
.tschs .tsch .output:hover {
  background: #4ea9ff;
}

.tschs .tsch .input {
  left: -10px;
  top: 2px;
  background: white;
}
.tschs .tsch .output {
  right: 10px;
  top: 2px;
}

.tschs .tsch .output .type {
  color: black;
  margin-top: -4px;
  margin-left: 23px;
}
.tschs .tsch .input .type {
  color: black;
  margin-top: -4px;
  margin-left: -55px;
}

.tschs .tsch .content {
  width: 100%;
  height: 100%;
  display: block;
}

/* BLOCK TSCH CSS */
.tschs .tsch.blockTsch {
  width: 200px;
  text-align: center;
  align-items: center;
}
/* .tsch.blockTsch.can-drop {
  -webkit-box-shadow: 0 2px 20px 2px #4e4;
  box-shadow: 0 2px 20px 2px #4e4;
}
.tsch.blockTsch.is-dropped {
  background-color: #29e;
} */

/* PERSONALIZED TSCH's */

/* Compute Module */
.tschs .tsch.computeModule {
  background: #7fba00;
  color: white;
}

.tschs .tsch.computeModule.selected {
  background: #7fba00;
}

/* Pheripherials */
.tschs .tsch.pheripherial {
  background: #00a4ef;
  color: white;
}

.tschs .tsch.pheripherial.selected {
  background: #00a4ef;
}

/* MAT TSCH CSS */
.tschs .tsch.matTsch {
  height: 140px;
  width: 540px;
  /* padding-left: 4px;
  padding-right: 4px; */
  background-color: #eb3d3d;
  /* https://cssgradient.io/ */
  /* background: rgb(235, 61, 61);
  background: linear-gradient(
    90deg,
    rgba(235, 61, 61, 1) 0%,
    rgba(154, 40, 40, 1) 100%,
    rgba(139, 27, 17, 1) 100%
  ); */
  border: dashed 4px transparent;
  border-color: #636262;
  border-radius: 4px;
  transition: background-color 0.3s;
  text-align: center;
  align-items: center;
  color: white;
}
.tschs .tsch.matTsch.can-drop {
  background-color: #cc2f2f;
}

